Bug 161013 - Rendering error when changing chart type for saved of-pie chart
Summary: Rendering error when changing chart type for saved of-pie chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: kurt.nordback@protonmail.com
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Pie-and-Donut
  Show dependency treegraph
 
Reported: 2024-05-09 17:36 UTC by kurt.nordback@protonmail.com
Modified: 2024-10-15 21:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kurt.nordback@protonmail.com 2024-05-09 17:36:40 UTC
Description:
An of-pie chart saved to file (ODF or OOXML format), then loaded and the "Chart Type" changed, is rendered as a strange combination of of-pie and the requested type.

Steps to Reproduce:
1. Create a pie-of-pie or bar-of-pie chart.
2. Save as ODF or OOXML.
3. Load the saved file.
4. Select the chart, then right-click and choose "Chart Type..."
5. Select another pie type, such as exploded donut.

Actual Results:
The displayed result will be a cross between the of-pie type and the chosen type.

Expected Results:
The displayed result is simply the chosen type, as if it were created anew.


Reproducible: Always


User Profile Reset: No

Additional Info:
See also bug 50934
Comment 1 m_a_riosv 2024-05-09 21:50:23 UTC
Please attach a sample file, reduce the size as much as possible without private information, and paste the information in Menu/Help/About LibreOffice, there is a copy icon.
Comment 2 Commit Notification 2024-05-10 17:57:34 UTC
Kurt Nordback committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4425741937fbd240fe414a68a7d5e9ac4b40affd

tdf#161013 Rendering error when changing chart type for saved of-pie chart

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 stragu 2024-05-16 00:16:27 UTC
Reproduced in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9b41d33a00763bebd5fc70787052222d35a98a52
CPU threads: 4; OS: Windows 11 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Fixed in:

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 658a212585c56540a17c41111e6829716d4ef4e3
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Kurt, are you ok to mark as fixed, or do you have more patches coming?