tdf#161013 Rendering error when changing chart type for saved of-pie chart

Reset pie sub-type property in XDiagram after passing it down,
so that it does not persist and overwrite the modified sub-type

Change-Id: If23ef2b1cff29efa5232d49381676592a0f39d17
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167487
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>